terraform-files-project/virtual-network-gateway.tf
resource "azurerm_public_ip" "PIP-vnetgateway" {
  name                = "pip-for-vnetgateway"
  location            = azurerm_resource_group.RG.location
  resource_group_name = azurerm_resource_group.RG.name
  allocation_method = "Dynamic"
}

resource "azurerm_virtual_network_gateway" "Vnet-gateway" {
  name                = "Vnet-gateway-hubspoke"
  location            = azurerm_resource_group.RG.location
  resource_group_name = azurerm_resource_group.RG.name

  type     = "Vpn"
  vpn_type = "RouteBased"

  active_active = false
  enable_bgp    = false
  sku           = "VpnGw1"

  ip_configuration {
    name                          = "vnetGatewayConfig"
    public_ip_address_id          = azurerm_public_ip.PIP-vnetgateway.id
    private_ip_address_allocation = "Dynamic"
    subnet_id                     = azurerm_subnet.vnet1_subnet_vnetgw.id
  }
vpn_client_configuration {
    address_space = ["10.2.0.0/24"]

    root_certificate {
      name = "DigiCert-Federated-ID-Root-CA"

      public_cert_data = <<EOF
MIIDuzCCAqOgAwIBAgIQCHTZWCM+IlfFIRXIvyKSrjANBgkqhkiG9w0BAQsFADBn
[...]
EOF

    }

    revoked_certificate {
      name       = "Verizon-Global-Root-CA"
      thumbprint = "912198EEF23DCAC40939312FEE97DD560BAE49B1"
    }
  }
}
